# indydevtools

./: .gitignore  README.md  aud.txt  config.sample.yml  engineering.md  pyproject.toml
indy_dev_tools/: main.py  models.py
indy_dev_tools/commands/: config.py  descriptions.py  hashtags.py  playground.py  references.py  script.py  simple_prompt_system.py  thumbnails.py  titles.py  youtube.py
indy_dev_tools/modules/: compose_description.py  compose_hashtags.py  compose_thumbnail.py  compose_title.py  create_description.py  create_formatted_references.py  create_hashtags.py  create_image.py  create_research.py  create_thumbnail.py  create_thumbnail_prompt.py  create_title.py  create_transcription.py  dict_util.py  file_util.py  generate_metadata_flow.py  idt_config.py  llm.py  prompts.py  resize_image.py  sps_get.py  sps_list.py  sps_prompt.py  transcribe.py
scripts/: publish_pypi.py  publish_testpypi.py  run_tox.py
