[tool.poetry]
name = "indy-dev-tools"
version = "0.1.0"
description = ""
authors = ["qwukker <minor7addfloortom@gmail.com>"]
readme = "README.md"
packages = [{include = "indy_dev_tools"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.scripts]
idt = "indy_dev_tools.main:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
