[tool.poetry]
name = "indydevtools"
version = "0.1.7"
description = "An Opinionated Agentic Engineering toolbox for developers powered by LLM Agents to solve problems autonomously."
authors = ["IndyDevDan <agentic@indydevdan.com>"]
readme = "README.md"
packages = [{include = "indy_dev_tools"}]
exclude = ["scripts/*"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.6.0"
python-dotenv = "^1.0.1"
openai = "^1.11.0"
typer = "^0.9.0"
platformdirs = "^4.2.0"
pyyaml = "^6.0.1"
requests = "^2.31.0"
faster-whisper = "^0.10.0"
pillow = "^10.2.0"
exa-py = "^1.0.8"
inquirer = "^3.2.3"

[tool.poetry.scripts]
idt = "indy_dev_tools.main:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
